@@ -12,6 +12,7 @@
 package org.sventon.appl;
 
 import org.apache.commons.io.IOUtils;
+import org.apache.commons.lang.StringUtils;
 import org.apache.commons.lang.Validate;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -25,6 +26,8 @@ import org.tmatesoft.svn.core.internal.io.svn.SVNRepositoryFactoryImpl;
 
 import javax.annotation.PostConstruct;
 import java.io.*;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentLinkedQueue;
@@ -83,6 +86,11 @@ public final class Application {
   private final ConcurrentLinkedQueue<RepositoryName> updating = new ConcurrentLinkedQueue<RepositoryName>();
 
   /**
+   * System property, sventon.baseURL, used to set a base property for relative URL:s.
+   */
+  public static final String SVENTON_BASE_URL_PROPERTY_KEY = "sventon.baseURL";
+
+  /**
    * Constructor.
    *
    * @param configDirectory       Configuration root directory. Directory will be created if it does not already exist,
@@ -109,6 +117,10 @@ public final class Application {
     initSvnSupport();
     loadRepositoryConfigurations();
     initCaches();
+    final URL baseURL = getBaseURL();
+    if (baseURL != null) {
+      logger.info("Property [" + SVENTON_BASE_URL_PROPERTY_KEY + "] set to: " + baseURL);
+    }
   }
 
   /**
@@ -392,5 +404,25 @@ public final class Application {
    */
   public boolean isEditableConfig() {
     return editableConfig;
+  }
+
+  /**
+   * Gets the base URL to use for relative URL:s.
+   *
+   * @return The base URL or null if property <tt>sventon.baseURL</tt> was not set.
+   */
+  public URL getBaseURL() {
+    String baseURL = StringUtils.trimToEmpty(System.getProperty(SVENTON_BASE_URL_PROPERTY_KEY));
+    if (!baseURL.isEmpty()) {
+      if (!baseURL.endsWith("/")) {
+        baseURL = baseURL + "/";
+      }
+      try {
+        return new URL(baseURL);
+      } catch (MalformedURLException e) {
+        logger.warn("Value of property '" + SVENTON_BASE_URL_PROPERTY_KEY + "' is not a valid URL: " + e.getMessage());
+      }
+    }
+    return null;
   }
 }
